--- a/Forte/Base.lproj/Main.storyboard
+++ b/Forte/Base.lproj/Main.storyboard
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kyp-rB-hfc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="x18-Ql-3dI">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="H2g-HK-rAn">
+            <objects>
+                <tabBarController id="x18-Ql-3dI" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="5cP-zu-Dyz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Ftq-Wd-Klb" kind="relationship" relationship="viewControllers" id="gcP-Ma-dDO"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ySg-7C-45g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-114" y="711"/>
+        </scene>
         <!--Forte-->
         <scene sceneID="4aw-PS-K3L">
             <objects>
@@ -15,7 +32,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Cell" rowHeight="66" id="Dch-OM-yj0" customClass="AllGlossaryTableViewCell" customModule="Forte" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="66"/>
+                                <rect key="frame" x="0.0" y="28" width="600" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dch-OM-yj0" id="Etd-pW-xjb">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
@@ -55,27 +72,12 @@
                             <outlet property="delegate" destination="Ftq-Wd-Klb" id="FtE-Oe-1wc"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="z5y-Mh-Y02"/>
                     <navigationItem key="navigationItem" title="Forte" id="wzb-Aj-Hxa"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jrJ-Qw-RTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1108" y="1000"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="PLX-Ko-qQs">
-            <objects>
-                <navigationController id="Kyp-rB-hfc" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cHK-LF-tQg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="Ftq-Wd-Klb" kind="relationship" relationship="rootViewController" id="FtB-nr-7eO"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U6r-ro-jhi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="288" y="1000"/>
+            <point key="canvasLocation" x="546" y="711"/>
         </scene>
     </scenes>
 </document>
