--- a/Forte/Base.lproj/Main.storyboard
+++ b/Forte/Base.lproj/Main.storyboard
@@ -16,11 +16,61 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ftq-Wd-Klb" kind="relationship" relationship="viewControllers" id="gcP-Ma-dDO"/>
+                        <segue destination="cPj-b0-2bA" kind="relationship" relationship="viewControllers" id="bLE-uL-orb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ySg-7C-45g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-114" y="711"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="WJH-f0-JdU">
+            <objects>
+                <viewController id="cPj-b0-2bA" customClass="SearchViewController" customModule="Forte" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Abj-BN-xqn"/>
+                        <viewControllerLayoutGuide type="bottom" id="Bxn-cZ-bhb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Saq-0V-huq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bxM-Tv-x2Y">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="cPj-b0-2bA" id="pRV-5I-ow8"/>
+                                    <outlet property="delegate" destination="cPj-b0-2bA" id="K3s-XF-5uA"/>
+                                </connections>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Gl4-Uk-LUi">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="cPj-b0-2bA" id="rz3-BG-rXn"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Gl4-Uk-LUi" secondAttribute="trailing" id="GQc-me-Bw4"/>
+                            <constraint firstAttribute="bottom" secondItem="bxM-Tv-x2Y" secondAttribute="bottom" id="Hw2-hI-IqQ"/>
+                            <constraint firstItem="Gl4-Uk-LUi" firstAttribute="top" secondItem="Abj-BN-xqn" secondAttribute="bottom" id="JPq-C4-jTA"/>
+                            <constraint firstItem="bxM-Tv-x2Y" firstAttribute="top" secondItem="Saq-0V-huq" secondAttribute="top" id="NnQ-Ky-9GT"/>
+                            <constraint firstAttribute="trailing" secondItem="bxM-Tv-x2Y" secondAttribute="trailing" id="T9j-cL-aba"/>
+                            <constraint firstItem="bxM-Tv-x2Y" firstAttribute="leading" secondItem="Saq-0V-huq" secondAttribute="leading" id="c53-Ee-dna"/>
+                            <constraint firstItem="Gl4-Uk-LUi" firstAttribute="leading" secondItem="Saq-0V-huq" secondAttribute="leading" id="jzW-RI-Tr5"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="O5X-ym-JWW"/>
+                    <connections>
+                        <outlet property="searchBar" destination="Gl4-Uk-LUi" id="B9c-Wt-MYr"/>
+                        <outlet property="tableView" destination="bxM-Tv-x2Y" id="cM8-68-smm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h3V-4c-Tmt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="706" y="1294"/>
         </scene>
         <!--Forte-->
         <scene sceneID="4aw-PS-K3L">
@@ -35,7 +85,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dch-OM-yj0" id="Etd-pW-xjb">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="65.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Bv-tZ-e62">
@@ -77,7 +127,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jrJ-Qw-RTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="546" y="711"/>
+            <point key="canvasLocation" x="847" y="587"/>
         </scene>
     </scenes>
 </document>
