--- a/Forte/GlossaryItemDetailedTableViewCell.xib
+++ b/Forte/GlossaryItemDetailedTableViewCell.xib
@@ -12,11 +12,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="266"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuG-Kz-Dnd">
-                        <rect key="frame" x="23" y="49" width="279" height="137"/>
+                        <rect key="frame" x="23" y="49" width="279" height="147"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -27,12 +27,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcZ-up-aT2">
-                        <rect key="frame" x="140" y="211" width="40" height="40"/>
+                        <rect key="frame" x="145" y="221" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="40" id="4Ng-ys-blF"/>
-                            <constraint firstAttribute="height" constant="40" id="mzr-21-FWQ"/>
+                            <constraint firstAttribute="width" constant="30" id="4Ng-ys-blF"/>
+                            <constraint firstAttribute="height" constant="30" id="mzr-21-FWQ"/>
                         </constraints>
-                        <state key="normal" title="Button" image="greyStar"/>
+                        <state key="normal" title="Button" image="Heart_grey"/>
                         <connections>
                             <action selector="starIcon:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Z0b-XP-EN7"/>
                         </connections>
@@ -59,6 +59,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="greyStar" width="350" height="350"/>
+        <image name="Heart_grey" width="350" height="350"/>
     </resources>
 </document>
